# ruby-swig

./: .gitignore  CMakeLists.txt  Gemfile  README.md  build-swig.sh  ruby_swig.gemspec
lib/: hello_world.c  hello_world.i  ruby_swig.rb
lib/ruby_swig/: version.rb
